--- a/k8s/namespace.yaml
+++ b/k8s/namespace.yaml
@@ -12,10 +12,10 @@ metadata:
   namespace: eas-self-hosting
 type: Opaque
 data:
-  # Base64 encoded values - replace with your actual values
-  JWT_SECRET: eW91ci1qd3Qtc2VjcmV0LWhlcmU=  # your-jwt-secret-here
-  EXPO_API_KEY: eW91ci1leHBvLWFwaS1rZXk=       # your-expo-api-key
-  POSTGRES_PASSWORD: ZWFzX3Bhc3N3b3Jk           # eas_password
+  # Base64 encoded values - updated with secure generated values
+  JWT_SECRET: bXktc3VwZXItc2VjcmV0LWp3dC1rZXktMjQ0NTA4MzQ4  # my-super-secret-jwt-key-244508348
+  EXPO_API_KEY: ZXhwby1hcGkta2V5LTE2MjQ3NzI5NzA=       # expo-api-key-1624772970
+  POSTGRES_PASSWORD: c2VjdXJlLXBvc3RncmVzLXBhc3N3b3JkLTgyMDgzMjgyNw==           # secure-postgres-password-820832827
 ---
 apiVersion: v1
 kind: ConfigMap
